# ClaimTrackr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
bills/: HIV_output_reject.txt  bodyache_claim_passed.txt  bodyache_rejected.txt
frontend/: package-lock.json
frontend/src/: App.jsx  ClaimForm.jsx  styles.css
src/: embeddings.py  ingest.py  process_claim.py  prompts.py  retrieve.py
